--- a/package.json
+++ b/package.json
@@ -1,39 +1,51 @@
 {
-    "name": "seth-mvp",
-    "version": "1.0.0",
-    "description": "2 Player Board Game Host",
-    "author": "SWay",
-    "license": "ISC",
-    "engines": {
-      "node": ">=6.13.0"
-    },
-    "scripts": {
-      "start": "node server/index.js",
-      "start-dev": "nodemon server/index.js",
-      "build": "webpack -d",
-      "build-dev": "webpack -d --watch"
-    },
-    "dependencies": {
-      "body-parser": "^1.19.0",
-      "eslint-config-airbnb": "^17.1.0",
-      "express": "^4.16.4",
-      "react": "^16.8.6",
-      "react-dom": "^16.8.6",
-      "axios": "^0.18.0"
-    },
-    "devDependencies": {   
-      "babel-core": "^6.26.3",
-      "babel-loader": "^6.4.1",
-      "babel-preset-es2015": "^6.24.1",
-      "babel-preset-react": "^6.23.0",
-      "eslint": "^5.16.0",
-      "eslint-config-airbnb": "^17.1.0",
-      "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
-      "eslint-plugin-import": "^2.17.2",
-      "eslint-plugin-jsx-a11y": "^6.2.1",
-      "eslint-plugin-react": "^7.13.0",
-      "nodemon": "^1.19.0",
-      "webpack": "^2.2.1"
-    }
-  }
-  
+  "name": "seth-mvp",
+  "version": "1.0.0",
+  "description": "2 Player Board Game Host",
+  "author": "SWay",
+  "license": "ISC",
+  "engines": {
+    "node": ">=6.13.0"
+  },
+  "scripts": {
+    "start": "node server/index.js",
+    "start-dev": "nodemon server/index.js",
+    "build": "webpack -d",
+    "build-dev": "webpack -d --watch"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.19.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "express": "^4.16.4",
+    "path": "^0.12.7",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.0.6",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor.git",
+    "eslint-loader": "^4.0.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
+    "nodemon": "^1.19.0",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
+  },
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SethanielWay/BoardGame.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SethanielWay/BoardGame/issues"
+  },
+  "homepage": "https://github.com/SethanielWay/BoardGame#readme"
+}
