--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
   },
   "scripts": {
     "start": "node server/index.js",
-    "start-dev": "nodemon server/index.js",
+    "server-dev": "nodemon server/index.js",
     "build": "webpack -d",
     "build-dev": "webpack -d --watch"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "eslint-config-airbnb": "^17.1.0",
     "express": "^4.16.4",
+    "favicon": "0.0.2",
+    "mongoose": "^5.9.9",
     "path": "^0.12.7",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-bootstrap": "^1.0.0",
+    "react-dom": "^16.13.0",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
